# cim-domain-nix

./: .gitignore  ARCHITECTURE_CORRECT.md  ARCHITECTURE_REDESIGN.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_DESIGN.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_6_COMPLETE.md  PROJECT_STATUS.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_STATUS.md  ROUNDTRIP_VERIFICATION.md  add_event_types.sh  flake.nix  readme.md  result
.claude/: CLAUDE.md
.claude/instructions/: git-prep.md
.github/workflows/: ci.yml  release.yml
doc/: api-diagrams.md  api-index.md  api-quick-reference.md  api-state-diagrams.md  api.md  nats-ecs-mapping.md  nats-index.md  nats-integration.md  nats-subject-algebra.md  nats-subject-mapping.md  network-integration.md  user-stories.md
doc/architecture/: domain-overview.md
doc/design/: architecture.md  nix-parser-integration.md
doc/plan/: IMPLEMENTATION_STATUS.md  PRODUCTION_PLAN.md  README.md  completion-roadmap.md  completion-summary.md  enhanced-nix-domain.md  final-summary.md  immediate-next-steps.md  implementation-roadmap.md  lsp-implementation-analysis.md  nats-integration-plan.md  parser-implementation.md
doc/progress/: 2025-01-nix-enhancements.md  progress.json
docs/: FLAKE_ANALYSIS_CAPABILITIES.md  FLAKE_EVALUATION.md
examples/: advanced_parser_demo.rs  analyzer_demo.rs  ast_manipulation_demo.rs  cim_network_starlink_demo.rs  complete_pipeline.rs  create_flake.rs  debug_dead_code.rs  distributed_ecs_demo.rs  evaluate_cim_domain_git.rs  flake_roundtrip.rs  formatter_demo.rs  functor_demo.rs  generate_topology.rs  git_flake_demo.rs.disabled  git_integration_demo.rs  home_manager_demo.rs  inspect_ast.rs  nats_ecs_demo.rs  nats_integration_demo.rs  nats_subject_demo.rs  network_integration_demo.rs  parse_flake.rs  roundtrip_demo.rs  service_demo.rs  simple_topology_demo.rs  starlink_topology_demo.rs  template_demo.rs  test_cim_domain_git_flake.rs  test_syntax_kinds.rs
examples/test_nix_files/: dead_code_test.nix  performance_test.nix  security_test.nix
src/: infrastructure.rs  lib.rs
src/_deprecated/functor/: mappings.rs  mod.rs
src/_deprecated/io/: mod.rs  writer.rs
src/_deprecated/nix/: ast_converter.rs  flake_analyzer.rs  flake_evaluator.rs  parser.rs
src/adapters/: mod.rs  topology_reader.rs  topology_writer.rs
src/aggregate/: mod.rs
src/analyzer/: dead_code.rs  dependency.rs  mod.rs  performance.rs  security.rs
src/commands/: mod.rs
src/domains/: mod.rs
src/domains/home_manager/: aggregate.rs  analyzer.rs  commands.rs  converter.rs  events.rs  handlers.rs  mod.rs  services.rs  value_objects.rs
src/domains/network/: aggregate.rs  commands.rs  events.rs  handlers.rs  mod.rs  services.rs  value_objects.rs
src/events/: factory.rs  mod.rs
src/formatter/: mod.rs
src/functor/: laws.rs  mod.rs  projections.rs
src/functors/: mod.rs  resource_type_functor.rs
src/git_integration/: analyzer.rs  flake_lock_tracker.rs  mod.rs
src/handlers/: cqrs_adapter.rs  mod.rs
src/home_manager/: analyzer.rs  converter.rs  mod.rs  program_converter.rs
src/io/: reader.rs  validator.rs
src/nats/: client.rs  config.rs  error.rs  health.rs  mod.rs  publisher.rs  subject.rs  subject_tests.rs  subscriber.rs
src/network/: builders.rs  events.rs  handlers.rs  mod.rs  value_objects.rs
src/nix/: ast.rs  mod.rs  objects.rs  parser.rs  topology.rs  value_objects.rs
src/parser/: advanced.rs  ast.rs  derivation.rs  error.rs  flake.rs  manipulator.rs  mod.rs  module.rs  module_tests.rs  tests.rs
src/projections/: mod.rs
src/queries/: mod.rs
src/services/: mod.rs
src/templates/: mod.rs
src/tests/: correlation_causation_tests.rs  mod.rs
src/value_objects/: message_identity.rs  mod.rs
tests/: analyzer_integration_test.rs  cim_network_acceptance_test.rs  flake_tests.rs  git_integration_tests.rs.disabled  handler_tests.rs  home_manager_tests.rs  integration_test.rs  nats_ecs_integration.rs  network_acceptance.rs  network_integration_test.rs  network_simple_test.rs  service_tests.rs  starlink_acceptance_test.rs  value_object_invariants.rs
tests/acceptance/: network_topology_test.rs
