[package]
name = "cim-domain-nix"
version = "0.3.0"
edition = "2021"
authors = ["The Cowboy AI Team"]
description = "Domain module for Nix ecosystem operations including flakes, modules, overlays, and configurations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thecowboyai/alchemist"
keywords = ["nix", "nixos", "flakes", "domain-driven-design", "cim"]
categories = ["development-tools", "config"]

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Domain dependencies
cim-domain = { git = "https://github.com/TheCowboyAI/cim-domain.git", branch = "main" }
cim-subject = { git = "https://github.com/TheCowboyAI/cim-domain.git", branch = "main" }
cim-domain-git = { path = "../cim-domain-git" }

# Nix-specific dependencies
tempfile = "3.8"
which = "5.0"
regex = "1.10"
toml = "0.8"
semver = "1.0"

# For parsing Nix expressions
nom = "7.1"
pest = "2.7"
pest_derive = "2.7"

# Nix parsing
rnix = "0.11"      # Core Nix parser
rowan = "0.15"     # Syntax tree library
nix-editor = "0.3" # For AST manipulation

# Analysis
petgraph = "0.6"  # For dependency graphs
rayon = "1.7"     # For parallel parsing
futures = "0.3"   # For async stream processing
num_cpus = "1.16" # For parallel processing

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
pretty_assertions = "1.4"
test-case = "3.3"
proptest = "1.4"
tempfile = "3.12"
tracing-subscriber = "0.3"

[features]
default = []
test-utils = []

[[example]]
name = "create_flake"
path = "examples/create_flake.rs"

[[example]]
name = "template_demo"
path = "examples/template_demo.rs"

[[example]]
name = "service_demo"

[[example]]
name = "analyzer_demo"
path = "examples/analyzer_demo.rs"

[[example]]
name = "formatter_demo"
path = "examples/formatter_demo.rs"

[[example]]
name = "git_integration_demo"
path = "examples/git_integration_demo.rs"
