[package]
name = "cim-domain-nix"
version = "0.4.0"
edition = "2021"
authors = ["Cowboy AI, LLC <dev@thecowboy.ai>"]
description = "Domain-Driven Design module for comprehensive Nix ecosystem integration within CIM"
documentation = "https://docs.rs/cim-domain-nix"
homepage = "https://github.com/thecowboyai/cim-domain-nix"
repository = "https://github.com/thecowboyai/cim-domain-nix"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["domain", "cim", "event-sourcing", "ddd", "nix"]
categories = ["development-tools", "data-structures"]
exclude = [
    ".github/",
    "tests/",
    "examples/",
    "benches/",
    ".gitignore",
    ".git/",
    "*.log",
    "target/",
]

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1.11", features = ["v4", "v5", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# NATS dependencies
async-nats = "0.33"
futures = "0.3"
tokio-stream = "0.1"
bytes = "1.5"

# Domain dependencies
cim-infrastructure = { path = "../cim-infrastructure" }

# Temporarily disabled - Will re-enable when we need them for adapters
# cim-domain = { git = "ssh://git@github.com/TheCowboyAI/cim-domain.git", branch = "main" }
# cim-domain-git = { git = "ssh://git@github.com/TheCowboyAI/cim-domain-git.git", tag = "v0.8.1" }
# Note: cim-subject is deprecated, subjects are now in cim-domain

# Nix-specific dependencies
tempfile = "3.8"
which = "5.0"
regex = "1.10"
toml = "0.8"
semver = "1.0"

# For parsing Nix expressions
nom = "7.1"
pest = "2.7"
pest_derive = "2.7"

# Nix parsing
rnix = "0.11"      # Core Nix parser
rowan = "0.15"     # Syntax tree library
nix-editor = "0.3" # For AST manipulation

# Analysis
petgraph = "0.6"  # For dependency graphs
rayon = "1.7"     # For parallel parsing
num_cpus = "1.16" # For parallel processing
glob = "0.3"      # For file pattern matching

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
pretty_assertions = "1.4"
test-case = "3.3"
proptest = "1.4"
tempfile = "3.12"
tracing-subscriber = "0.3"

[features]
default = []
